updated package version

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "url": "https://github.com/NativeScript/nativescript-background-http"
   },
   "name": "nativescript-background-http",
-  "version": "2.3.0",
+  "version": "2.3.0-2016-11-08",
   "nativescript": {
     "platforms": {
       "ios": "2.3.0",
