--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "NativeScript"
   ],
   "dependencies": {
-    "tns-core-modules": "next"
+    "tns-core-modules": "2.4.0-2016-09-29-4256"
   },
   "devDependencies": {
-    "tns-platform-declarations": "next",
-    "typescript": "^2.0.3"
+    "tns-platform-declarations": "2.3.0",
+    "typescript": "1.8.10"
   },
   "scripts": {
     "tsc": "tsc",
